--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -15,6 +15,21 @@
   }
 }
 
+// no flexbox styles mainly for ie 9 support
+.no-flexbox {
+  .navigation {
+    display: table;
+    margin: 0 auto;
+    list-style: none;
+  }
+  .navigation--item {
+    display: table-cell;
+    width: 100px;
+    text-align: center;
+    vertical-align: middle;
+  }
+}
+
 .navigation.open {
   display: flex;
   flex-direction: column;
