--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -5,11 +5,11 @@
 // base styles
 @import "base/reset";
 @import "base/a11y";
-@import "base/typography";
+//@import "base/typography";
 
 // layout
 @import "layout/header";
 @import "layout/navigation";
 
 // page styles
-@import "page/demo";
+//@import "page/demo";
