--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -30,6 +30,20 @@
   }
 }
 
+.no-flexboxlegacy {
+  .navigation {
+    display: table;
+    margin: 0 auto;
+    list-style: none;
+  }
+  .navigation--item {
+    display: table-cell;
+    width: 100px;
+    text-align: center;
+    vertical-align: middle;
+  }
+}
+
 .navigation.open {
   display: flex;
   flex-direction: column;
