--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -8,6 +8,7 @@
   display: none;
   @media screen and (min-width: 50em) {
     display: flex;
+    height: 100px;
     height: rem-calc(100);
     list-style: none;
     justify-content: center;
@@ -97,9 +98,11 @@
   font-size: rem-calc(25);
   padding-left: rem-calc(10);
   @media screen and (max-width: 14.813em) {
+    font-size: 15px;
     font-size: rem-calc(15);
   }
   @media screen and (min-width: 14.875em) and (max-width: 18.688em) {
+    font-size: 18px;
     font-size: rem-calc(18);
   }
 }
