--- a/css/navigation.03-03-2015.unprefixed.css
+++ b/css/navigation.03-03-2015.unprefixed.css
@@ -69,6 +69,10 @@ body {
       display: none;
       visibility: hidden; } }
 
+.no-mediaqueries .header-nav--menu-container {
+  display: none;
+  visibility: hidden; }
+
 .button--header-nav {
   background: none;
   border-width: 0.125rem;
