added modernizr-classes import

--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -10,6 +10,7 @@
 // layout
 @import "layout/header";
 @import "layout/navigation";
+@import "layout/modernizr-classes";
 
 // page styles
 //@import "page/demo";
