--- a/css/navigation.03-04-2015.unprefixed.css
+++ b/css/navigation.03-04-2015.unprefixed.css
@@ -176,6 +176,10 @@ body {
     display: table; }
   .no-flexbox .header-nav--menu-container:after {
     clear: both; }
+  @media screen and (min-width: 50em) {
+    .no-flexbox .header-nav--menu-container {
+      display: none;
+      visibility: hidden; } }
 @media screen and (min-width: 50em) {
   .no-flexbox .navigation {
     display: table;
