--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,6 +1,8 @@
 html,
 body {
-  height: 100%
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 *,
@@ -18,15 +20,4 @@ p {
   padding: 0;
 }
 
-body {
-  background: $body-bg;
-  color: $body-color;
-  padding: 0;
-  margin: 0;
-  font-family: $font-family-sans-serif;
-  font-weight: $font-weight-normal;
-  font-style: $font-weight-normal;
-  line-height: $base-line-height;
-  position: relative;
-  cursor: auto;
-}
+
