--- a/scss/page/_demo.scss
+++ b/scss/page/_demo.scss
@@ -1,6 +1,19 @@
 
 /* =============[   For Demo Purposes   ]=============*/
 
+body {
+  background: $body-bg;
+  color: $body-color;
+  padding: 0;
+  margin: 0;
+  font-family: $font-family-sans-serif;
+  font-weight: $font-weight-normal;
+  font-style: $font-weight-normal;
+  line-height: $base-line-height;
+  position: relative;
+  cursor: auto;
+}
+
 // reset for footer and main
 footer,
 main {
