--- a/css/navigation.03-10-2015.unprefixed.css
+++ b/css/navigation.03-10-2015.unprefixed.css
@@ -157,9 +157,10 @@ div, ul, li, h1, p {
 .operamini .fn-navigation {
   display: block; }
 
-.fn-navTrigger__no-js {
-  display: none;
-  visibility: hidden; }
+@media screen and (min-width: 50em) {
+  .fn-navTrigger__no-js {
+    display: none;
+    visibility: hidden; } }
 
 /* browsers with javascript disabled or the script failed to load */
 .no-js .fn-navTrigger__no-js {
