update all the things
fix checkbox flash on desktop / tablet devices

--- a/scss/base/_a11y.scss
+++ b/scss/base/_a11y.scss
@@ -14,17 +14,8 @@
   width: 1px !important;
   overflow: hidden;
 }
+// visually hidden mixin in mixins folder
 
-@mixin hide-visually() {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-}
 
 // Screen readers sometimes ignore display:none1. This means the content will be read despite being “hidden”.
 // To hide content completely from screen readers use the following:
