--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -19,6 +19,19 @@
     &:after { clear: both; }
 }
 
+// visually hide from screen but show to screen readers
+@mixin hide-visually() {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
+}
+
+
 // mixin to hide from screen and screen readers... or use the placeholder class in base/_a11y.scss
 @mixin hide-screen-readers() {
     display: none;
