--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -7,6 +7,7 @@
 //
 // =====================================================================================================================
 $oil                            : #333;
+$header-bg-color                : #333;
 $header-nav-link-color          : #ECF0F1;
 $header-nav-list-item-bg-hover  : #81cfe0;
 $header-nav-anchor-color-hover  : #1c2833;
