--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -10,8 +10,10 @@
 
 // layout
 @import "layout/header";
+//@import "layout/refactor-header";
 @import "layout/navigation";
-@import "layout/modernizr-classes";
+//@import "layout/refactor-nav";
+//@import "layout/modernizr-classes";
 
 // page styles
 //@import "page/demo";
