remove header scss from main scss file

--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -9,10 +9,8 @@
 //@import "base/typography";
 
 // layout
-@import "layout/header";
-//@import "layout/refactor-header";
+//@import "layout/header";
 @import "layout/navigation";
-//@import "layout/refactor-nav";
 //@import "layout/modernizr-classes";
 
 // page styles
