--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,11 +1,94 @@
-//
-// 1: <nav> element styles ( fn-nav-container )
-// 2: <nav><ul> styles ( fn-navigation )
-// 3: Modernizr based Styles
-//
+/** ================================================================================================================= *\
+  *                                                                                                                   *\
+  *           Flexbox navigation styles
+  *
+  *   1.  Header styles is strictly for the <header> element and items with .fn-header class
+  *   2.  Navigation styles is strictly for the <nav> and <ul> items with .fn-nav class
+  *                                                                                                                   *\
+ *\ ================================================================================================================= */
+
+// =====================================================================================================================
+//    _    _                _              _____ _         _
+//   | |  | |              | |            / ____| |       | |
+//   | |__| | ___  __ _  __| | ___ _ __  | (___ | |_ _   _| | ___  ___
+//   |  __  |/ _ \/ _` |/ _` |/ _ \ '__|  \___ \| __| | | | |/ _ \/ __|
+//   | |  | |  __/ (_| | (_| |  __/ |     ____) | |_| |_| | |  __/\__ \
+//   |_|  |_|\___|\__,_|\__,_|\___|_|    |_____/ \__|\__, |_|\___||___/
+//                                                    __/ |
+//                                                   |___/
+// =====================================================================================================================
+
+/* flexnav header "container" */
+.fn-header {
+  display: flex;
+  visibility: visible;
+  background: $header-bg-color;
+  min-width: 100%;
+  height: 3.125em;
+  justify-content: center;
+  @include promote-layer();
+  padding: rem-calc(7) rem-calc(5);
+  @media screen and (min-width: 50em) {
+    @include hide-screen-readers();
+  }
+}
+
+.no-js {
+  .fn-header {
+    justify-content: flex-start;
+  }
+}
+
+// site name / title
+/* header site title */
+.fn-header__name {
+  color: $header-nav-link-color;
+  align-self: flex-start;
+  margin-top: 0;
+  font-size: rem-calc(25);
+  padding-left: rem-calc(10);
+  @media screen and (max-width: 14.813em) {
+    font-size: 15px;
+    font-size: rem-calc(15);
+  }
+  @media screen and (min-width: 14.875em) and (max-width: 18.688em) {
+    font-size: 18px;
+    font-size: rem-calc(18);
+  }
+}
 
 
-// 1
+/* Navigation Menu Button */
+.fn-header__button {
+  @include border-button();
+  padding: rem-calc(4) rem-calc(6);
+  margin-top: auto;
+  margin-right: rem-calc(10);
+  margin-left: auto;
+  margin-bottom: auto;
+  align-self: flex-end;
+  color: $header-nav-link-color;
+
+
+  &:hover, &:focus {
+    background-color: $header-nav-list-item-bg-hover;
+    color: $header-nav-anchor-color-hover;
+  }
+}
+
+// =====================================================================================================================
+//
+//    _   _             _             _   _                _____ _         _
+//   | \ | |           (_)           | | (_)              / ____| |       | |
+//   |  \| | __ ___   ___  __ _  __ _| |_ _  ___  _ __   | (___ | |_ _   _| | ___  ___
+//   | . ` |/ _` \ \ / / |/ _` |/ _` | __| |/ _ \| '_ \   \___ \| __| | | | |/ _ \/ __|
+//   | |\  | (_| |\ V /| | (_| | (_| | |_| | (_) | | | |  ____) | |_| |_| | |  __/\__ \
+//   |_| \_|\__,_| \_/ |_|\__, |\__,_|\__|_|\___/|_| |_| |_____/ \__|\__, |_|\___||___/
+//                         __/ |                                      __/ |
+//                        |___/                                      |___/
+//
+// =====================================================================================================================
+
 /* html5 <nav> element... holds the navigation list */
 .fn-nav-container {
   @include promote-layer();
@@ -28,7 +111,7 @@
 }
 
 /* navigation list is open */
-.fn-navigation.open {
+.fn-navigation.is-open {
   display: flex;
   flex-direction: column;
   background: $header-bg-color;
@@ -55,6 +138,10 @@
 
     }
   }
+}
+
+// for anchor links inside the unordered list in the <nav> element
+.fn-navigation__item {
   a {
     color: $header-nav-link-color;
     line-height: inherit;
@@ -70,7 +157,18 @@
 }
 
 
-// 3
+// =====================================================================================================================
+//    __  __           _                 _             _____ _         _
+//   |  \/  |         | |               (_)           / ____| |       | |
+//   | \  / | ___   __| | ___ _ __ _ __  _ _____ __  | (___ | |_ _   _| | ___  ___
+//   | |\/| |/ _ \ / _` |/ _ \ '__| '_ \| |_  / '__|  \___ \| __| | | | |/ _ \/ __|
+//   | |  | | (_) | (_| |  __/ |  | | | | |/ /| |     ____) | |_| |_| | |  __/\__ \
+//   |_|  |_|\___/ \__,_|\___|_|  |_| |_|_/___|_|    |_____/ \__|\__, |_|\___||___/
+//                                                                __/ |
+//                                                               |___/
+// =====================================================================================================================
+
+
 // styles for browsers that dont support flexbox
 .no-flexbox {
   // hide nav list on small screens that don't support flexbox
@@ -79,7 +177,7 @@
   }
 
   // make it a block level element once clicked
-  .fn-navigation.open {
+  .fn-navigation.is-open {
     display: block;
   }
   // make nav items block element instead of table cell on small screens
@@ -132,11 +230,13 @@
     display: none;
     visibility: hidden;
   }
+ }
+
+ 
 
   // display the checkbox under 800px
-  @media screen and (max-width: 49.9375em) {
-    // this is for the "checkbox" css nav
-    // absolutely position the check box and clip it from the screen
+@media screen and (max-width: 49.9375em) {
+  .no-js {
     .fn-navTrigger__no-js {
       clip: rect(0px, 0px, 0px, 0px);
       position: absolute;
@@ -144,7 +244,9 @@
       right: 80%;
       left: 90%;
     }
+  }
 
+  .no-js {
     // if its checked display the nav
     .fn-navTrigger__no-js:checked ~ .fn-navigation {
       display: flex;
@@ -155,9 +257,10 @@
       margin-left: 0;
       list-style: none;
     }
+  }
 
-    //
-    /* checkbox label is removed if javascript is enabled */
+  .no-js {
+    // checkbox label is removed if javascript is enabled
     label[for="fn-noJs"] {
       position: absolute;
       top: 1.5%;
@@ -172,3 +275,4 @@
     }
   }
 }
+
