--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,78 +1,3 @@
-/** ================================================================================================================= *\
-  *                                                                                                                   *\
-  *           Flexbox navigation styles
-  *
-  *   1.  Header styles is strictly for the <header> element and items with .fn-header class
-  *   2.  Navigation styles is strictly for the <nav> and <ul> items with .fn-nav class
-  *                                                                                                                   *\
- *\ ================================================================================================================= */
-
-// =====================================================================================================================
-//    _    _                _              _____ _         _
-//   | |  | |              | |            / ____| |       | |
-//   | |__| | ___  __ _  __| | ___ _ __  | (___ | |_ _   _| | ___  ___
-//   |  __  |/ _ \/ _` |/ _` |/ _ \ '__|  \___ \| __| | | | |/ _ \/ __|
-//   | |  | |  __/ (_| | (_| |  __/ |     ____) | |_| |_| | |  __/\__ \
-//   |_|  |_|\___|\__,_|\__,_|\___|_|    |_____/ \__|\__, |_|\___||___/
-//                                                    __/ |
-//                                                   |___/
-// =====================================================================================================================
-
-/* flexnav header "container" */
-.fn-header {
-  display: flex;
-  visibility: visible;
-  background: $header-bg-color;
-  min-width: 100%;
-  height: 3.125em;
-  justify-content: center;
-  @include promote-layer();
-  padding: rem-calc(7) rem-calc(5);
-  @media screen and (min-width: 50em) {
-    @include hide-screen-readers();
-  }
-}
-
-.no-js {
-  .fn-header {
-    justify-content: flex-start;
-  }
-}
-
-// site name / title
-/* header site title */
-.fn-header__name {
-  color: $header-nav-link-color;
-  align-self: flex-start;
-  margin-top: 0;
-  font-size: rem-calc(25);
-  padding-left: rem-calc(10);
-  @media screen and (max-width: 14.813em) {
-    font-size: 15px;
-    font-size: rem-calc(15);
-  }
-  @media screen and (min-width: 14.875em) and (max-width: 18.688em) {
-    font-size: 18px;
-    font-size: rem-calc(18);
-  }
-}
-
-
-/* Navigation Menu Button */
-.fn-header__button {
-  @include border-button();
-  padding: rem-calc(4) rem-calc(6);
-  margin: auto rem-calc(10) auto auto;
-  align-self: flex-end;
-  color: $header-nav-link-color;
-
-
-  &:hover, &:focus {
-    background-color: $header-nav-list-item-bg-hover;
-    color: $header-nav-anchor-color-hover;
-  }
-}
-
 // =====================================================================================================================
 //
 //    _   _             _             _   _                _____ _         _
@@ -90,19 +15,36 @@
 .fn-nav-container {
   @include promote-layer();
   background-color: $header-bg-color;
+  padding: rem-calc(8);
+  max-height: 0;
+  @include hide-screen-readers();
+  @media screen and (min-width: 50em) {
+    display: block;
+    visibility: visible;
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
 
+// nav container is hidden under 800px. is-open class shows the menu.
+.fn-nav-container.is-open {
+  visibility: visible;
+  height: auto;
+  display: block;
+  max-height: 800px;
+}
 
-// 2
 /* navigation unordered list */
 .fn-navigation {
-  display: none;
+  list-style: none;
+  background-color: $header-bg-color;
+  @include hide-screen-readers();
   @media screen and (min-width: 50em) {
     display: flex;
-    height: 100px;
-    height: rem-calc(100);
-    list-style: none;
-    justify-content: center;
+    visibility: visible;
+    max-width: 80%;
+    margin: auto;
+    justify-content: space-around;
     align-items: center;
   }
 }
@@ -111,17 +53,12 @@
 .fn-navigation.is-open {
   display: flex;
   flex-direction: column;
-  background: $header-bg-color;
-  width: 100%;
-  overflow: hidden;
-  margin-left: 0;
-  list-style: none;
+  visibility: visible;
 }
 
 /* navigation list item */
 .fn-navigation__item {
   padding: rem-calc(15) rem-calc(20);
-  //transition: background-color .3s; // I do not like the way this looks... scrapping for now.
   &:focus {
     outline: 1px solid $header-nav-list-item-bg-hover;
   }
@@ -132,7 +69,6 @@
     background-color: $header-nav-list-item-bg-hover;
     a {
       color: $header-nav-anchor-color-hover;
-
     }
   }
 }
@@ -152,123 +88,3 @@
     }
   }
 }
-
-
-// =====================================================================================================================
-//    __  __           _                 _             _____ _         _
-//   |  \/  |         | |               (_)           / ____| |       | |
-//   | \  / | ___   __| | ___ _ __ _ __  _ _____ __  | (___ | |_ _   _| | ___  ___
-//   | |\/| |/ _ \ / _` |/ _ \ '__| '_ \| |_  / '__|  \___ \| __| | | | |/ _ \/ __|
-//   | |  | | (_) | (_| |  __/ |  | | | | |/ /| |     ____) | |_| |_| | |  __/\__ \
-//   |_|  |_|\___/ \__,_|\___|_|  |_| |_|_/___|_|    |_____/ \__|\__, |_|\___||___/
-//                                                                __/ |
-//                                                               |___/
-// =====================================================================================================================
-
-
-// styles for browsers that dont support flexbox
-.no-flexbox {
-  // hide nav list on small screens that don't support flexbox
-  .fn-navigation {
-    display: none;
-  }
-
-  // make it a block level element once clicked
-  .fn-navigation.is-open {
-    display: block;
-  }
-  // make nav items block element instead of table cell on small screens
-  .fn-navigation__item  {
-    display: block;
-    width: 100%;
-  }
-
-  // Min width: 800px
-  @media screen and (min-width: 50em) {
-    // to center nav list make it a table for non flexbox desktop browsers
-    .fn-navigation {
-      display: table; // was display: flex-box
-      margin: 0 auto;
-      list-style: none;
-    }
-
-    // center text vertically and horizontally in table cell
-    .fn-navigation__item {
-      display: table-cell; // make table cell for centered nav
-      width: 100px;
-      text-align: center;
-      vertical-align: middle;
-    }
-  }
-}
-
-// Man Do I hate browser sniffing...
-/* Specific Styling for Opera Mini */
-.operamini {
-  .fn-navigation {
-    display: block;
-  }
-}
-
-
-// hide checkbox trigger for browsers with js and above 800px
-@media screen and (min-width: 50em) {
-  .fn-navTrigger__no-js {
-    display: none;
-    visibility: hidden;
-  }
-}
-
-
-/* browsers with javascript disabled or the script failed to load */
-.no-js {
-  // hide the checkbox above 799px
-  .fn-navTrigger__no-js {
-    display: none;
-    visibility: hidden;
-  }
- }
-
- 
-
-  // display the checkbox under 800px
-@media screen and (max-width: 49.9375em) {
-  .no-js {
-    .fn-navTrigger__no-js {
-      clip: rect(0px, 0px, 0px, 0px);
-      position: absolute;
-      top: 1.5%;
-      right: 80%;
-      left: 90%;
-    }
-  }
-
-  .no-js {
-    // if its checked display the nav
-    .fn-navTrigger__no-js:checked ~ .fn-navigation {
-      display: flex;
-      flex-direction: column;
-      background: $header-bg-color;
-      width: 100%;
-      overflow: hidden;
-      margin-left: 0;
-      list-style: none;
-    }
-  }
-
-  .no-js {
-    // checkbox label is removed if javascript is enabled
-    label[for="fn-noJs"] {
-      position: absolute;
-      top: 1.5%;
-      left: 70%;
-      color: $header-nav-link-color;
-      width: rem-calc(75);
-      height: rem-calc(30);
-      cursor: pointer;
-      //background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' width='30' height='30' viewBox='0 0 30 30'><path fill='#ECF0F1' d='M0 0h30v6H0zM0 24h30v6H0zM0 12h30v6H0z'/></svg>");
-      background: transparent url("../img/menu.png");
-    }
-  }
-}
-
