--- a/scss/layout/_old-browsers.scss
+++ b/scss/layout/_old-browsers.scss
@@ -27,6 +27,18 @@
   }
 }
 
+.no-flexbox .fn-navigation.is-open {
+  @media screen and (max-width: 49.9375em) {
+    display: block;
+    visibility: visible;
+  }
+}
+
+.no-flexbox .fn-header__button {
+  @media screen and (max-width: 49.9375em) {
+   float: right;
+  }
+}
 .no-flexbox .fn-navigation__item {
   @media screen and (min-width: 50em) {
     display: inline;
