--- a/css/navigation.03-13-2015.unprefixed.css
+++ b/css/navigation.03-13-2015.unprefixed.css
@@ -167,15 +167,6 @@ footer, main {
     text-align: center;
     margin-top: 0.9375rem; } }
 
-@media screen and (max-width: 49.9375em) {
-  .no-flexbox .fn-navigation.is-open {
-    display: block;
-    visibility: visible; } }
-
-@media screen and (max-width: 49.9375em) {
-  .no-flexbox .fn-header__button {
-    float: right; } }
-
 @media screen and (min-width: 50em) {
   .no-flexbox .fn-navigation__item {
     display: inline; } }
@@ -216,6 +207,10 @@ footer, main {
 .no-mediaqueries .fn-navigation__item {
   display: inline;
   padding: 0.9375rem 1.25rem; }
+
+@media screen and (max-width: 49.9375em) {
+  .operamini .fn-header__button {
+    float: right; } }
 
 @media screen and (min-width: 50em) {
   .fn-navTrigger__no-js {
