--- a/scss/layout/_old-browsers.scss
+++ b/scss/layout/_old-browsers.scss
@@ -85,10 +85,26 @@
   padding: rem-calc(15) rem-calc(20);
 }
 
+// =====================================================================================================================
+//     ____                         __  __ _       _
+//    / __ \                       |  \/  (_)     (_)
+//   | |  | |_ __   ___ _ __ __ _  | \  / |_ _ __  _
+//   | |  | | '_ \ / _ \ '__/ _` | | |\/| | | '_ \| |
+//   | |__| | |_) |  __/ | | (_| | | |  | | | | | | |
+//    \____/| .__/ \___|_|  \__,_| |_|  |_|_|_| |_|_|
+//          | |
+//
+// =====================================================================================================================
 
-// opera mini
 .operamini .fn-header__button {
   @media screen and (max-width: 49.9375em) {
     float: right;
+  }
+}
+
+.operamini .fn-navigation.is-open {
+  @media screen and (max-width: 49.9375em) {
+    display: block;
+    visibility: visible;
   }
 }
