ok maybe removed all old operamini stuff

--- a/scss/layout/_old-browsers.scss
+++ b/scss/layout/_old-browsers.scss
@@ -95,7 +95,7 @@
 //          | |
 //
 // =====================================================================================================================
-// no longer needed --> https://dev.opera.com/blog/opera-mini-server-upgrade/
+// no longer needed https://dev.opera.com/blog/opera-mini-server-upgrade/
 //
 //.operamini .fn-header__button {
 //  @media screen and (max-width: 49.9375em) {
