--- a/css/navigation.unprefixed.css
+++ b/css/navigation.unprefixed.css
@@ -208,10 +208,9 @@ footer, main {
   display: inline;
   padding: 0.9375rem 1.25rem; }
 
-@media screen and (min-width: 50em) {
-  .fn-navTrigger__no-js {
-    display: none;
-    visibility: hidden; } }
+.fn-navTrigger__no-js {
+  display: none;
+  visibility: hidden; }
 
 @media screen and (max-width: 49.9375em) {
   .no-js .fn-navTrigger__no-js {
