skip link mixin just in case

--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -37,6 +37,22 @@
     visibility: hidden;
 }
 
+// create a skip link
+@mixin skip-link() {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+
+    &:focus {
+        position: static;
+        width: auto;
+        height: auto;
+    }
+}
+
 
 
 
